# cpp-intro-aufgaben

./: CMakeLists.txt  CMakePresets.json  README.md  build.cmd  build.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  test_main.cpp  test_main.h
src/greet/: CMakeLists.txt  README.md  example_greet.cpp
src/include/: test.h
src/loops/: CMakeLists.txt  README.md  example_divisors.cpp  example_multiples.cpp  task_even_below.cpp  task_repeat.cpp
src/structs/: CMakeLists.txt  README.md  example_points_home.cpp  game.h  task_add_points.cpp  task_count_draws.cpp  task_count_wins.cpp  task_goal_diff.cpp  task_points_guest.cpp  task_result.cpp  task_table.cpp
src/vectors/: CMakeLists.txt  README.md  example_count.cpp  example_filter_less.cpp  task_count_less.cpp  task_filter_prefix.cpp  task_find_string.cpp
